--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,10 +1,10 @@
 CHANGES
 *******
 
-1.2.6 (unreleased)
-==================
+1.2.5-1 (2012-08-22)
+====================
 
-- Nothing changed yet.
+- Use updated 1.2.5 "all" build from the jQuery Tools builder.
 
 
 1.2.5 (2011-03-11)
