--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,13 @@
 CHANGES
 *******
 
+1.2.6 (2012-08-22)
+==================
+
+- Update to jQuery Tools 1.2.6, released 2011-09-23 (`announcement`_).
+
+.. _`announcement`: http://jquerytools.org/forum/tools/20/76049
+
 1.2.5-1 (2012-08-22)
 ====================
 
